	* add function to clear the peer list for a torrent
	* fix resume data functions to save/restore more torrent flags
	* limit number of concurrent HTTP announces
	* fix queue position for force_rechecking a torrent that is not auto-managed
	* improve rate-based choker documentation, and minor tweak
	* undeprecate upnp_ignore_nonrouters (but refering to devices on our subnet)
	* increase default tracker timeout
	* retry failed socks5 server connections
	* allow UPnP lease duration to be changed after device discovery
	* fix IPv6 address change detection on Windows

1.2.6 released

	* fix peer timeout logic
	* simplify proxy handling. A proxy now overrides listen_interfaces
	* fix issues when configured to use a non-default choking algorithm
	* fix issue in reading resume data
	* revert NXDOMAIN change from 1.2.4
	* don't open any listen sockets if listen_interfaces is empty or misconfigured
	* fix bug in auto disk cache size logic
	* fix issue with outgoing_interfaces setting, where bind() would be called twice
	* add build option to disable share-mode
	* support validation of HTTPS trackers
	* deprecate strict super seeding mode
	* make UPnP port-mapping lease duration configurable
	* deprecate the bittyrant choking algorithm
	* add build option to disable streaming

1.2.5 release

	* announce port=1 instead of port=0, when there is no listen port
	* fix LSD over IPv6
	* support TCP_NOTSENT_LOWAT on Linux
	* fix correct interface binding of local service discovery multicast
	* fix issue with knowing which interfaces to announce to trackers and DHT
	* undeprecate settings_pack::dht_upload_rate_limit

1.2.4 release

	* fix binding TCP and UDP sockets to the same port, when specifying port 0
	* fix announce_to_all_trackers and announce_to_all_tiers behavior
	* fix suggest_read_cache setting
	* back-off tracker hostname looksups resulting in NXDOMAIN
	* lower SOCKS5 UDP keepalive timeout
	* fix external IP voting for multi-homed DHT nodes