@@ -1,3 +1,4 @@
+	* add set_alert_fd in python binding, to supersede set_alert_notify
 	* add function to clear the peer list for a torrent
 	* fix resume data functions to save/restore more torrent flags
 	* limit number of concurrent HTTP announces
